syntax = "proto3";

package l3;

/* Static IPv4 / IPv6 routes */
message StaticRoutes {
    message Route {
        uint32 vrf_id = 1;                   /* VRF identifier, field required for remote client. This value should be
                                                consistent with VRF ID in static route key. If it is not, value from
                                                key will be preffered and this field will be overriden.  */
        string description = 2;              /* optional description */
        string dst_ip_addr = 3;              /* ip address + prefix in format <address>/<prefix> */
        string next_hop_addr = 4;            /* next hop address */
        string outgoing_interface = 5;       /* outgoing interface name */
        uint32 weight = 6;                   /* weight (used for unequal cost load balncing) */
        uint32 preference = 7;               /* The preference of the path. Lowest preference is preferred.  */
                                             /* Only paths with the best preference contribute to forwarding. */
                                             /* (a poor man's primary and backup) */
    }
    repeated Route route = 1;                /* list of IP static routes */
}

/* Static IP ARP entries */
message ArpTableEntries {
    message ArpTableEntry {
        uint32 fib_index = 1;                          /* IP FIB index, 0 is the default FIB */
        string interface = 2;                          /* Interface to which this APR entry applies */
        string ip_address = 3;                         /* IP address */
        string phys_address = 4;                       /* MAC address matching to the IP */
        bool static = 5;                               /* TRUE if this is a static ARP entry */
    }
    repeated ArpTableEntry arp_table_entries = 100;    /* list of ARP entries */
}
